h2 db added to config
