# public-transport-rest/src/main/java/ptc/springframework/publictransportrest/entities/TicketType.java
@@ -4,7 +4,6 @@ import lombok.Getter;
 import lombok.Setter;
 
 import javax.persistence.Entity;
-import javax.persistence.Id;
 import javax.persistence.Table;
 import javax.validation.constraints.NotNull;
 import java.time.LocalDateTime;
@@ -13,11 +12,8 @@ import java.util.UUID;
 @Getter
 @Setter
 @Entity
-@Table(name = "ticket_types", schema="ptc")
-public class TicketType {
-
-    @Id
-    private UUID id;
+@Table(name = "ticket_types", schema="public_transport")
+public class TicketType extends BaseEntity {
 
     @NotNull
     private String name;
